mts-deployment-strategies/canary-releasing/mts-canary-random.yaml
#################################################################################
# Istio virtual service configuration for ingress gateway 
# - handles traffic coming from outside of the mesh
#################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mts-routes
spec:
  hosts:
  - mts.local
  - mts.local:31380
  - mts.local:31390
  gateways:
  - mts-gateway
  http:
  - match:
    - uri:
        prefix: /api/services/rest/dishmanagement/
    rewrite:
      uri: /
    route:
    - destination:
        host: mts-dishes.default.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 90
    - destination:
        host: mts-dishes.default.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 10
  - match:
    - uri:
        prefix: /api
    rewrite:
      uri: /mythaistar
    route:
    - destination:
        host: mts-booking-order.default.svc.cluster.local
        port:
          number: 8081
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mts-frontend.default.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mts-dishes-subsets          
  namespace: default
spec:
  host: mts-dishes.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
