mts-deployment-strategies/canary-releasing/mts-virtualservice-dishes.yaml
#################################################################################
# Istio virtual service configuration for dishes service
# - handles traffic going to dishes service
# - only used for routing requests of the booking order to the most recent version of the dishes service
# - this is needed because waiters have to be able to request dishes ordered from customers that have seen the most recent version
#################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mts-dishes-routing
spec:
  hosts:
  - mts-dishes.default.svc.cluster.local
  http:
  - match: 
    - sourceLabels:
        app: mts-booking-order
    route:
    - destination:
        host: mts-dishes
        subset: v2
        port:
          number: 80
